--- a/cloud_analysis_seismology/AWS_101.md
+++ b/cloud_analysis_seismology/AWS_101.md
@@ -1,34 +1,58 @@
-# AWS 101 
+# EC2 + Docker + Jupyter + S3
 
 This tutorial will walk you thought getting on an AWS cloud instance from the ground up.
 
-
-Marine Denolle and the UW team deliver a AWS Concept lecture, slides are below:
-<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQ5eeN51JXBOcjPcUNP_QQWL4GCCKMW7O0ODfe0xg01iAYdUy6Ne7QvVNM-RaKzYfUFJQTuEsxJ2Q6O/embed?start=true&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-
 ## AWS web console access
 
-:::{note}
-For workshop participants:
-1. Log in with your designated IAM User to this console: https://806812320051.signin.aws.amazon.com/console
-2. Login with the username and temporary password sent to you prior to the workshop. 
-3. As a first log in, the auto-generated password needs to be replaced. Use a sophisticated password to confirm with AWS security standards.
-:::
+* Login to [Cloudbank](https://cloudbank.org)
+* From the dashboard click on "Access Cloudbank Billing Accounts"
+* On the "Amazon Web Services" billing account, click on the `Login` button under "Public Cloud Web Console Login"
 
 ### Choosing a region
 An important aspect of cloud is that the computing and data centers are distributed around the world and labeled as "regions". For fastest connection to data storage on S3, we recommend to choose the region where the data is. To choose a region in AWS, follow these steps:
 
 1. Log in to your AWS Management Console.
 2. In the top-right corner, click on the current region name (e.g., US East (N. Virginia)).
-3. In the dropdown menu that appears, select a region (e.g., US West (Oregon)).
+3. In the dropdown menu that appears, select a region (for this tutorial let's use US West (Oregon)).
 4. After selecting the region, all AWS services you use will be hosted in that region.
 
-:::{note}
-Please use `US West (Oregon, us-west-2)` region for the tutorial.
-:::
+### Creating a security group to grant external access to an instance
+
+### How to Create an EC2 Security Group with SSH (22) and HTTP (80)
+
+Open the EC2 Console  
+AWS Console → **EC2**
+
+Go to “Security Groups”  
+Left sidebar → **Network & Security → Security Groups**
+
+Click **Create security group**
+
+Basic Details  
+- Security group name: `web-ssh-access`  
+- Description: `Allow SSH and HTTP`
+
+Add Inbound Rules  
+Click **Add rule** twice, for source select `Anywhere-IPv4`:
+
+| Type | Protocol | Port | Source |
+|------|----------|------|--------|
+| SSH  | TCP      | 22   | `0.0.0.0/0` |
+| HTTP | TCP      | 80   | `0.0.0.0/0` |
+
+Leave Outbound Rules as default (All traffic allowed)
+
+Click **Create security group**
+
+Attach the Security Group to an EC2 Instance  
+- When launching a new instance, choose **Select existing security group** and pick `web-ssh-access`  
+- For an existing instance:  
+  Actions → Networking → Change security groups → select `web-ssh-access` → Save
+
+Your instance now allows SSH on port 22 and HTTP on port 80.
 
 ### Launching an instance
-Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps below. Screen shots of the steps are linked [here](https://docs.google.com/presentation/d/1L49N8OL8vscjOkERC32l7H6K9IS-EeXOf6qerNEYxPs/edit?usp=sharing).
+Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps below.
 
 1. In the AWS Management Console, search and navigate to the **EC2** dashboard using the `Search` box on the top.
 2. Click on **Launch Instance** to start the process of creating a new EC2 instance.
@@ -44,11 +68,10 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
     * If the file does not save as `.pem`, replace the extension with `.pem`. 
     * For Windows users, download the type ED25519 and the `.ppk` file.
     * You can re-use the key created previously, if you still have access to that file.
-    * This step is optional. You can skip it and connect only through a browser.
     :::
 
 7. **Network Settings**: Select existing security group -> Select security group -> Select `default`. This allows traffics in and out of the instance and is required for SSH (port 22) and Jupyter lab connection.
-8. **Configure Storage**: Add more storage to your instance. 20 GiB will be sufficient for most workshop agenda.
+8. **Configure Storage**: Add more storage to your instance. 20 GiB will be sufficient for this tutorial.
 9. **Launch instance** with the current configuration. Wait until the instance showing a `Running` state on the console.
 10. **Connect to the instance**: AWS provides web-based connection where you don't need to have a SSH client installed. Click on your instance -> Connect -> EC2 Instance Connect.
     
