updated all tutorial

--- a/cloud_analysis_seismology/AWS_101.md
+++ b/cloud_analysis_seismology/AWS_101.md
@@ -70,7 +70,7 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
     * You can re-use the key created previously, if you still have access to that file.
     :::
 
-7. **Network Settings**: Select existing security group -> Select security group -> Select `default`. This allows traffics in and out of the instance and is required for SSH (port 22) and Jupyter lab connection.
+7. **Network Settings**: Select existing security group -> Select security group -> Select `web-ssh-access`. This allows traffics in and out of the instance and is required for SSH (port 22) and Jupyter lab connection.
 8. **Configure Storage**: Add more storage to your instance. 20 GiB will be sufficient for this tutorial.
 9. **Launch instance** with the current configuration. Wait until the instance showing a `Running` state on the console.
 10. **Connect to the instance**: AWS provides web-based connection where you don't need to have a SSH client installed. Click on your instance -> Connect -> EC2 Instance Connect.
@@ -101,12 +101,6 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
 ## Environment Configuration
 As you may notice, the EC2 you just launched has no user-specific software installed at all. We have two options to configure the computing environment for the instance.
 
-:::{note}
-For workshop participants:
-Please follow **Option 1** to install and use the Docker images. 
-:::
-
-### Option 1: Use Docker image on EC2
 You can run codes within automatically generated Docker image. Please notice that some OS may require you to run the command line-by-line. 
 
 1. To install docker, run the following command.
@@ -133,66 +127,11 @@ You can run codes within automatically generated Docker image. Please notice tha
             nohup jupyter lab --no-browser --ip=0.0.0.0 --allow-root  --IdentityProvider.token=scoped &
     ```
 
-### Option 2: Manual installation
-Alternatively, you can manually configure your environment. To start from scratch, copy paste these commands in the terminal. Please notice that some OS may require you to run the command line-by-line. 
-
-```bash
-sudo yum install -y git
-wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
-chmod +x Miniconda3-latest-Linux-x86_64.sh 
-./Miniconda3-latest-Linux-x86_64.sh -b -p $HOME/miniconda
-./miniconda/bin/conda init bash
-bash
-```
-
-Now you can install your own software, i.e., clone your repository, install your environment, run your scripts. We will illustrate with this example. Please notice that some OS may require you to run the command line-by-line. 
-
-```bash
-git clone https://github.com/SeisSCOPED/seis_cloud
-cd seis_cloud
-conda create -y -n seiscloud -c conda-forge python=3.10 pip obspy
-conda activate seiscloud
-pip install -r requirements.txt
-```
-
-To download files from your EC2 instance: 
-```bash
-scp -i "your.pem" ec2-user@Your-Public-IPv4-DNS:/home/ec2-user/seis_cloud/file .
-```
-
-If you are on Windows: 
-```bash
-C:\> pscp -i yourkey.ppk ec2-user@Your-Public-IPv4-DNS:/home/ec2-user/seis_cloud/file C:\[local_destination_path]\[folder]
-```
-
-
-## Opening a Jupyter Lab/Notebook
-
-
-To get the jupyter lab running:
-```bash
-jupyter lab --no-browser --ip=0.0.0.0 --allow-root --port 80  --IdentityProvider.token=scoped
-```
-
 An EC2 instance has two IP addresses: one for the AWS internal networking system, one open to the public. To access the notebook, you need to connect on the public IP address. Open a browser, type the IP address of the instance (see the Public IPv4 DNS). Then simply type the address in the browser. Be sure to use `http://`, i.e., `http://Your-Public-IPv4-DNS`. You can find the public IPv4 DNS address on the web console.
 
 ![Find Public IP address](ec2_find_publicIP.jpg)
 
 You will be prompted to window requesting for a token. Please enter `scoped` (case sensitive), as we specified in `--IdentityProvider.token=scoped` argument.
-
-:::{note}
-There are alternative options to login:
-1. Forward the port when login in the instance:
-    ```bash
-    ssh -i "file.pem" user@Your-Public-IPv4-DNS -L 8888:localhost:80 -N
-    ```
-    
-2. Open a browser and type `localhost:8888`
-:::
-
-```{warning}
-We have experienced exception. Safari and Chrome may treat the connection as malware. These are warnings and can be ignored. You may find a way to continue on the browser.
-```
 
 ## Save the virtual image (optional)
 
