refine AWS 101 tutorial by removing outdated steps and images for clarity

--- a/cloud_analysis_seismology/AWS_101.md
+++ b/cloud_analysis_seismology/AWS_101.md
@@ -56,10 +56,6 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
 
 1. In the AWS Management Console, search and navigate to the **EC2** dashboard using the `Search` box on the top.
 2. Click on **Launch Instance** to start the process of creating a new EC2 instance.
-
-    ![Launch an Instance](ec2_launch_ss.jpg)
-
-3. **Name and Tags**: Be specific for the best job management: ``FirstName_LastName_Jobname``.
 4. **Application and OS Image**: Choose the default ``Amazon linux``.
 5. **Instance Type**: This specifies the RAM, vCPU, network, etc. `t2.xlarge` is recommended for this tutorial.
 6. **Key Pair**: Create a new key pair, or specify an existing one. Download the `.pem` file, move it to a location that you can have access to and remember where it is. 
@@ -75,12 +71,8 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
 9. **Launch instance** with the current configuration. Wait until the instance showing a `Running` state on the console.
 10. **Connect to the instance**: AWS provides web-based connection where you don't need to have a SSH client installed. Click on your instance -> Connect -> EC2 Instance Connect.
     
-    ![Connect to an instance through web](ec2_connect_web_ss.png)
-
     :::{note}
-    There are alternative ways connecting to the instance using the SSH client installed on your laptop. See the snapshot and the instructions below.
-
-    ![Connect to an instance with SSH](ec2_connect_ssh_ss.png)
+    There are alternative ways connecting to the instance using the SSH client installed on your laptop.
 
     a. On **Linux/macOS**, copy the ssh link command in the folder where the PEM file is below and ssh to the instance. Be sure to change the permission of the key file so that it is only readable to you. You only need to do it once.
     ```bash
@@ -99,9 +91,7 @@ Launch an instance using **EC2 (Elastic Computing Cloud)**. Follow the steps bel
     :::
 
 ## Environment Configuration
-As you may notice, the EC2 you just launched has no user-specific software installed at all. We have two options to configure the computing environment for the instance.
-
-You can run codes within automatically generated Docker image. Please notice that some OS may require you to run the command line-by-line. 
+As you may notice, the EC2 you just launched has no user-specific software installed at all. Next we will configure the computing environment using a Docker container.
 
 1. To install docker, run the following command.
 
@@ -129,9 +119,7 @@ You can run codes within automatically generated Docker image. Please notice tha
 
 An EC2 instance has two IP addresses: one for the AWS internal networking system, one open to the public. To access the notebook, you need to connect on the public IP address. Open a browser, type the IP address of the instance (see the Public IPv4 DNS). Then simply type the address in the browser. Be sure to use `http://`, i.e., `http://Your-Public-IPv4-DNS`. You can find the public IPv4 DNS address on the web console.
 
-![Find Public IP address](ec2_find_publicIP.jpg)
-
-You will be prompted to window requesting for a token. Please enter `scoped` (case sensitive), as we specified in `--IdentityProvider.token=scoped` argument.
+You will be prompted for a token. Please enter `scoped` (case sensitive), as we specified in `--IdentityProvider.token=scoped` argument.
 
 ## Save the virtual image (optional)
 
@@ -141,7 +129,7 @@ In your AWS Management Console:
 1. Navigate to the EC2 dashboard.
 2. Select the EC2 instance that you want to save the image of.
 3. Right-click on the instance and click on "Create Image" in the dropdown menu.
-4. In the "Create Image" dialog box, enter a descriptive name for your image in the "Name" field. For this workshop, please use the format **FirstName_LastName_Image_TutorialX**.
+4. In the "Create Image" dialog box, enter a descriptive name for your image in the "Name" field.
 5. Optionally, you can add a description and tags to the image for easier management later on.
 6. Click on the "Create Image" button to start the image creation process.
 7. Wait for the image creation process to complete. This may take several minutes depending on the size of your instance and the amount of data being saved.
