Update EC2 setup and S3 tutorial: enhance Docker instructions, clarify IAM user permissions, and improve S3 bucket configuration guidance

--- a/cloud_analysis_seismology/3_tutorial_noisepy_scedc_s3_explained.ipynb
+++ b/cloud_analysis_seismology/3_tutorial_noisepy_scedc_s3_explained.ipynb
@@ -44,6 +44,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure datetimerange is available for DateTimeRange usage\n",
+    "import importlib.util\n",
+    "if importlib.util.find_spec(\"datetimerange\") is None:\n",
+    "    import subprocess\n",
+    "    import sys\n",
+    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"datetimerange\"])\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,8 +251,7 @@
     "\n",
     "config.ncomp = 3  # 1 or 3 component data (needed to decide whether do rotation)\n",
     "\n",
-    "config.stationxml = False  # station.XML file used to remove instrument response for SAC/miniseed data\n",
-    "      # If True, the stationXML file is assumed to be provided.\n",
+    "config.stationxml = True  # StationXML metadata is required to remove the instrument response\n",
     "config.rm_resp = RmResp.INV  # select 'no' to not remove response and use 'inv' if you use the stationXML,'spectrum',\n",
     "\n",
     "############## NOISE PRE-PROCESSING ##################\n",
@@ -271,7 +284,7 @@
     "# config.substack = True \n",
     "# config.substack_windows = 4\n",
     "\n",
-    "config.maxlag = 200  # lags of cross-correlation to save (sec)"
+    "config.maxlag = 200  # lags of cross-correlation to save (sec)\n"
    ]
   },
   {
@@ -420,7 +433,7 @@
     "\n",
     "After computing individual cross-correlations, the next crucial step is to **stack** them. Stacking involves averaging multiple cross-correlation functions, which significantly enhances the coherent signals (representing Earth's subsurface properties) and suppresses random noise. This process improves the signal-to-noise ratio, making the subtle seismic signals clearer and more interpretable.\n",
     "\n",
-    "In a cloud workflow, storing the stacked results back to **AWS S3** offers several advantages: persistent storage, easy sharing with collaborators, and accessibility for further analysis from any compute resource. Here, we configure the stack stores to write our final products directly to a designated S3 bucket.\n",
+    "In a cloud workflow, storing the stacked results back to **AWS S3** offers several advantages: persistent storage, easy sharing with collaborators, and accessibility for further analysis from any compute resource. Here, we configure the stack stores to write our final products directly to a designated S3 bucket. **You must create and own this bucket (or a specific prefix) before continuing and supply its path via the `STACK_STORE_PATH` environment variable or by editing the notebook.**\n",
     "\n",
     "We now create the stack stores. Because this tutorial runs locally, we will use an ASDF stack store to output the data. ASDF is a data container in HDF5 that is used in full waveform modeling and inversion. H5 behaves well locally. \n",
     "\n",
@@ -436,9 +449,17 @@
    "outputs": [],
    "source": [
     "# Define the S3 bucket path where the stacked cross-correlation results will be saved.\n",
-    "# IMPORTANT: Replace \"s3://stack-store-bucket-demo\" with your own S3 bucket name where you have write permissions.\n",
-    "# Ensure this bucket exists in your AWS account.\n",
-    "s3_path = \"s3://stack-store-bucket-demo\" \n",
+    "# IMPORTANT: Provide the path to an existing bucket/prefix you control. You can set the\n",
+    "# STACK_STORE_PATH environment variable (e.g., STACK_STORE_PATH=s3://my-bucket/noisepy-stacks)\n",
+    "# before launching Jupyter, or edit the fallback value below.\n",
+    "import os\n",
+    "STACK_STORE_PATH = os.environ.get(\"STACK_STORE_PATH\", \"s3://stack-store-bucket-demo\").strip()\n",
+    "if STACK_STORE_PATH == \"s3://stack-store-bucket-demo\":\n",
+    "    raise ValueError(\n",
+    "        \"Set the STACK_STORE_PATH environment variable or edit this notebook to point to an existing S3 bucket \"\n",
+    "        \"that you own. The bucket must be created ahead of time.\"\n",
+    "    )\n",
+    "s3_path = STACK_STORE_PATH\n",
     "\n",
     "import boto3\n",
     "\n",
@@ -452,7 +473,7 @@
     "# This allows NoisePy to authenticate and write data to your specified S3 bucket.\n",
     "S3_STORAGE_WRITE_OPTIONS = {\"s3\": {\"key\": current_credentials.access_key, \n",
     "                                   \"secret\": current_credentials.secret_key,\n",
-    "                                   \"token\": current_credentials.token}} # Include session token for temporary credentials if applicable"
+    "                                   \"token\": current_credentials.token}} # Include session token for temporary credentials if applicable\n"
    ]
   },
   {
