Fix notebook JSON formatting

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -118,8 +118,7 @@
     "            if chunk:\n",
     "                f.write(chunk)\n",
     "\n",
-    "local_path, local_path.stat().st_size / (1024 * 1024)
-"
+    "local_path, local_path.stat().st_size / (1024 * 1024)\n"
    ]
   },
   {
