--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -2,204 +2,220 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dd9b19ef",
    "metadata": {},
    "source": [
-    "# 3 - Explore portal data from JupyterHub\n",
+    "# 3 - Explore portal data from JupyterHub (script form)\n",
     "\n",
-    "Goal: in the JupyterHub from step 1, call the toy data portal API, download a NetCDF dataset from the bucket, open it, and make a simple plot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Prerequisites\n",
-    "- JupyterHub from step 1 is running (use the credentials printed during deployment).\n",
-    "- The portal from step 2 is running and already has at least one NetCDF file uploaded (see the screenshots in step 2 and the sample download links in `README.md`).\n",
-    "- The portal bucket was made readable for everyone (the step that added `allUsers` as `storage.objectViewer`).\n",
-    "- Note the portal external IP from step 2. Set `PORTAL_BASE` below to `http://<EXTERNAL-IP>`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%pip install -q requests pandas xarray netCDF4 matplotlib"
+    "This script mirrors the notebook in step 3. It:\n",
+    "- Lists datasets from the toy data portal API.\n",
+    "- Falls back to a local NetCDF if `LOCAL_NETCDF` is set or the portal is unreachable.\n",
+    "- Downloads the chosen file (if not local), opens it with xarray, prints metadata, and saves a quick plot.\n",
+    "- Designed for two-way sync with a notebook via Jupytext (format: `ipynb` and `py:percent`).\n",
+    "\n",
+    "Environment variables:\n",
+    "- `PORTAL_BASE` (default `http://<EXTERNAL-IP>`): base URL of the portal.\n",
+    "- `LOCAL_NETCDF` (optional): path to a local NetCDF file to use if the portal is empty/unreachable.\n",
+    "- `OUT_PLOT` (optional): where to save the plot PNG (default `plot.png`)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c0c630db",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "PORTAL_BASE = os.environ.get(\"PORTAL_BASE\", \"http://<EXTERNAL-IP>\").rstrip('/')\n",
-    "PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
-    "PORTAL_BASE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## List datasets from the portal API"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import requests, pandas as pd\n",
-    "\n",
-    "resp = requests.get(f\"{PORTAL_API}/datasets\", timeout=30)\n",
-    "resp.raise_for_status()\n",
-    "datasets = resp.json().get(\"datasets\", [])\n",
-    "print(f\"Found {len(datasets)} dataset entries\")\n",
-    "pd.DataFrame(datasets)[[\"id\", \"format\", \"bytes\", \"location\"]].head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Pick a NetCDF entry to download. This example grabs the first entry that looks like a NetCDF file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from pathlib import Path\n",
+    "from typing import List, Dict, Any\n",
     "\n",
-    "def choose_dataset(entries):\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import requests\n",
+    "import xarray as xr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37b168b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configuration\n",
+    "PORTAL_BASE = os.environ.get(\"PORTAL_BASE\", \"http://<EXTERNAL-IP>\").rstrip(\"/\")\n",
+    "PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
+    "LOCAL_NETCDF = os.environ.get(\"LOCAL_NETCDF\")\n",
+    "OUT_PLOT = Path(os.environ.get(\"OUT_PLOT\", \"plot.png\"))\n",
+    "\n",
+    "print(f\"Portal base: {PORTAL_BASE}\")\n",
+    "if LOCAL_NETCDF:\n",
+    "    print(f\"Local NetCDF override: {LOCAL_NETCDF}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95c02857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_datasets() -> List[Dict[str, Any]]:\n",
+    "    \"\"\"Return dataset entries from the portal API, or a local fallback if provided.\"\"\"\n",
+    "    datasets: List[Dict[str, Any]] = []\n",
+    "    portal_error = None\n",
+    "    try:\n",
+    "        resp = requests.get(f\"{PORTAL_API}/datasets\", timeout=30)\n",
+    "        resp.raise_for_status()\n",
+    "        datasets = resp.json().get(\"datasets\", [])\n",
+    "    except Exception as exc:  # pragma: no cover - best effort\n",
+    "        portal_error = str(exc)\n",
+    "\n",
+    "    if portal_error:\n",
+    "        print(f\"Portal API error (will fall back to LOCAL_NETCDF if set): {portal_error}\")\n",
+    "\n",
+    "    if not datasets and LOCAL_NETCDF:\n",
+    "        p = Path(LOCAL_NETCDF).expanduser().resolve()\n",
+    "        datasets = [\n",
+    "            {\n",
+    "                \"id\": p.name,\n",
+    "                \"format\": \"NetCDF\",\n",
+    "                \"bytes\": p.stat().st_size if p.exists() else None,\n",
+    "                \"location\": f\"file://{p}\",\n",
+    "            }\n",
+    "        ]\n",
+    "\n",
+    "    print(f\"Found {len(datasets)} dataset entries\")\n",
+    "    if datasets:\n",
+    "        print(pd.DataFrame(datasets)[[\"id\", \"format\", \"bytes\", \"location\"]].head())\n",
+    "    return datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82e02d3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def choose_dataset(entries: List[Dict[str, Any]]) -> Dict[str, Any]:\n",
     "    if not entries:\n",
     "        raise ValueError(\"No datasets available. Upload a NetCDF file first.\")\n",
     "    for item in entries:\n",
     "        fmt = (item.get(\"format\") or \"\").lower()\n",
-    "        if \"netcdf\" in fmt or str(item.get(\"id\", \"\")).endswith('.nc'):\n",
+    "        if \"netcdf\" in fmt or str(item.get(\"id\", \"\")).endswith(\".nc\"):\n",
     "            return item\n",
-    "    return entries[0]\n",
-    "\n",
-    "selected = choose_dataset(datasets)\n",
-    "selected"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Download the file\n",
-    "The portal records the storage path as `gs://...`. Convert that to an HTTPS URL so we can fetch it anonymously (thanks to the public read permission)."
+    "    return entries[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "29808761",
    "metadata": {},
    "outputs": [],
    "source": [
-    "download_url = selected[\"location\"].replace(\"gs://\", \"https://storage.googleapis.com/\")\n",
-    "local_path = Path(\"data\") / Path(selected[\"location\"]).name\n",
-    "local_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "def download_dataset(meta: Dict[str, Any]) -> Path:\n",
+    "    location = meta[\"location\"]\n",
+    "    if location.startswith(\"file://\"):\n",
+    "        local_path = Path(location.replace(\"file://\", \"\"))\n",
+    "        print(f\"Using local file: {local_path}\")\n",
+    "        return local_path\n",
     "\n",
-    "print(\"Downloading from:\", download_url)\n",
-    "\n",
-    "with requests.get(download_url, stream=True, timeout=300) as r:\n",
-    "    r.raise_for_status()\n",
-    "    with open(local_path, \"wb\") as f:\n",
-    "        for chunk in r.iter_content(chunk_size=1 << 20):\n",
-    "            if chunk:\n",
-    "                f.write(chunk)\n",
-    "\n",
-    "local_path, local_path.stat().st_size / (1024 * 1024)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Open the NetCDF file"
+    "    download_url = location.replace(\"gs://\", \"https://storage.googleapis.com/\")\n",
+    "    local_path = Path(\"data\") / Path(location).name\n",
+    "    local_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    print(f\"Downloading from: {download_url}\")\n",
+    "    with requests.get(download_url, stream=True, timeout=300) as r:\n",
+    "        r.raise_for_status()\n",
+    "        with open(local_path, \"wb\") as f:\n",
+    "            for chunk in r.iter_content(chunk_size=1 << 20):\n",
+    "                if chunk:\n",
+    "                    f.write(chunk)\n",
+    "    print(f\"Saved to {local_path} ({local_path.stat().st_size / (1024 * 1024):.1f} MiB)\")\n",
+    "    return local_path"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5028edc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xarray as xr\n",
-    "\n",
-    "ds = xr.open_dataset(local_path)\n",
-    "ds"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspect the global attributes that were stored in the file (these were also used to populate the portal metadata JSON)."
+    "def inspect_dataset(path: Path) -> xr.Dataset:\n",
+    "    ds = xr.open_dataset(path)\n",
+    "    print(\"Dataset summary:\")\n",
+    "    print(ds)\n",
+    "    print(\"\\nGlobal attributes:\")\n",
+    "    print(ds.attrs)\n",
+    "    return ds"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c6b86039",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds.attrs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Make a quick plot\n",
-    "Pick the first numeric data variable, slice a small portion to keep the plot light, and draw a simple line plot."
+    "def plot_sample(ds: xr.Dataset, output: Path) -> Path:\n",
+    "    numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
+    "    if not numeric_vars:\n",
+    "        raise ValueError(\"No numeric variables found to plot.\")\n",
+    "    var = numeric_vars[0]\n",
+    "    da = ds[var]\n",
+    "    sliced = da\n",
+    "    for dim in da.dims:\n",
+    "        sliced = sliced.isel({dim: slice(0, min(50, da.sizes[dim]))})\n",
+    "    squeezed = sliced.squeeze()\n",
+    "\n",
+    "    ax = squeezed.plot(figsize=(8, 4))\n",
+    "    plt.title(f\"Sample of '{var}'\")\n",
+    "    plt.tight_layout()\n",
+    "    output.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    plt.savefig(output)\n",
+    "    # Show only on interactive backends (not when running headless)\n",
+    "    if not plt.get_backend().lower().endswith(\"agg\"):\n",
+    "        plt.show()\n",
+    "    plt.close()\n",
+    "    print(f\"Saved plot to {output}\")\n",
+    "    return output"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6373355",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, 'dtype', None) and da.dtype.kind in 'if']\n",
-    "if not numeric_vars:\n",
-    "    raise ValueError(\"No numeric variables found to plot.\")\n",
-    "var = numeric_vars[0]\n",
-    "da = ds[var]\n",
-    "\n",
-    "# Slice a small piece from each dimension\n",
-    "sliced = da\n",
-    "for dim in da.dims:\n",
-    "    sliced = sliced.isel({dim: slice(0, min(50, da.sizes[dim]))})\n",
-    "squeezed = sliced.squeeze()\n",
-    "\n",
-    "ax = squeezed.plot(figsize=(8, 4))\n",
-    "plt.title(f\"Sample of '{var}'\")\n",
-    "plt.show()\n",
-    "\n",
-    "var"
+    "def main():\n",
+    "    datasets = list_datasets()\n",
+    "    selected = choose_dataset(datasets)\n",
+    "    print(f\"Selected dataset: {selected.get('id')}\")\n",
+    "    local_path = download_dataset(selected)\n",
+    "    ds = inspect_dataset(local_path)\n",
+    "    plot_sample(ds, OUT_PLOT)"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7024299",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Next ideas: explore more variables, compare datasets, or join this with other sources inside the same notebook."
+    "if __name__ == \"__main__\":\n",
+    "    main()"
    ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,py:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
