Require PORTAL_BASE or LOCAL_NETCDF in analysis notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import os\n",
     "from pathlib import Path\n",
-    "from typing import List, Dict, Any\n",
+    "from typing import Any, Dict, List\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
@@ -44,12 +44,24 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "PORTAL_BASE = os.environ.get(\"PORTAL_BASE\", \"http://<EXTERNAL-IP>\").rstrip(\"/\")\n",
+    "PORTAL_BASE = os.environ.get(\"PORTAL_BASE\")\n",
     "PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
     "LOCAL_NETCDF = os.environ.get(\"LOCAL_NETCDF\")\n",
     "OUT_PLOT = Path(os.environ.get(\"OUT_PLOT\", \"plot.png\"))\n",
     "\n",
-    "print(f\"Portal base: {PORTAL_BASE}\")\n",
+    "if not PORTAL_BASE and not LOCAL_NETCDF:\n",
+    "    raise SystemExit(\n",
+    "        \"Set PORTAL_BASE to the portal external URL (for example http://34.x.x.x) \"\n",
+    "        \"or set LOCAL_NETCDF to a local file path.\"\n",
+    "    )\n",
+    "\n",
+    "if PORTAL_BASE:\n",
+    "    PORTAL_BASE = PORTAL_BASE.rstrip(\"/\")\n",
+    "    print(f\"Portal base: {PORTAL_BASE}\")\n",
+    "    PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
+    "else:\n",
+    "    # Only allowed when LOCAL_NETCDF is provided\n",
+    "    PORTAL_API = None\n",
     "if LOCAL_NETCDF:\n",
     "    print(f\"Local NetCDF override: {LOCAL_NETCDF}\")"
    ]
@@ -65,12 +77,13 @@
     "    \"\"\"Return dataset entries from the portal API, or a local fallback if provided.\"\"\"\n",
     "    datasets: List[Dict[str, Any]] = []\n",
     "    portal_error = None\n",
-    "    try:\n",
-    "        resp = requests.get(f\"{PORTAL_API}/datasets\", timeout=30)\n",
-    "        resp.raise_for_status()\n",
-    "        datasets = resp.json().get(\"datasets\", [])\n",
-    "    except Exception as exc:  # pragma: no cover - best effort\n",
-    "        portal_error = str(exc)\n",
+    "    if PORTAL_API:\n",
+    "        try:\n",
+    "            resp = requests.get(f\"{PORTAL_API}/datasets\", timeout=30)\n",
+    "            resp.raise_for_status()\n",
+    "            datasets = resp.json().get(\"datasets\", [])\n",
+    "        except Exception as exc:  # pragma: no cover - best effort\n",
+    "            portal_error = str(exc)\n",
     "\n",
     "    if portal_error:\n",
     "        print(f\"Portal API error (will fall back to LOCAL_NETCDF if set): {portal_error}\")\n",
