Add pip install cell to analysis notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2fd5dc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -q requests pandas xarray matplotlib netCDF4"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dd9b19ef",
    "metadata": {},
