--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -11,6 +11,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccd206dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PORTAL_BASE = None  # set to http://<EXTERNAL-IP>\n",
+    "LOCAL_NETCDF = None  # optional local fallback\n",
+    "OUT_PLOT = 'plot.png'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dd9b19ef",
    "metadata": {},
