Clean notebook intro and sync with script

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -27,18 +27,18 @@
    "id": "dd9b19ef",
    "metadata": {},
    "source": [
-    "# 3 - Explore portal data from JupyterHub (script form)\n",
+    "# 3 - Explore portal data from JupyterHub\n",
     "\n",
-    "This script mirrors the notebook in step 3. It:\n",
+    "What this does:\n",
     "- Lists datasets from the toy data portal API.\n",
     "- Falls back to a local NetCDF if `LOCAL_NETCDF` is set or the portal is unreachable.\n",
     "- Downloads the chosen file (if not local), opens it with xarray, prints metadata, and saves a quick plot.\n",
-    "- Designed for two-way sync with a notebook via Jupytext (format: `ipynb` and `py:percent`).\n",
+    "- Kept in sync with the notebook via Jupytext (`ipynb` and `py:percent`).\n",
     "\n",
-    "Environment variables:\n",
-    "- `PORTAL_BASE` (default `http://<EXTERNAL-IP>`): base URL of the portal.\n",
-    "- `LOCAL_NETCDF` (optional): path to a local NetCDF file to use if the portal is empty/unreachable.\n",
-    "- `OUT_PLOT` (optional): where to save the plot PNG (default `plot.png`)."
+    "Configure at the top of the notebook:\n",
+    "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (use `http://<EXTERNAL-IP>` from the portal service).\n",
+    "- `LOCAL_NETCDF`: optional local NetCDF path to skip the portal download.\n",
+    "- `OUT_PLOT`: optional plot output path (default `plot.png`)."
    ]
   },
   {
