Clarify portal base example in analysis notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -36,7 +36,7 @@
     "- Kept in sync with the notebook via Jupytext (`ipynb` and `py:percent`).\n",
     "\n",
     "Configure at the top of the notebook:\n",
-    "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (use `http://<EXTERNAL-IP>` from the portal service).\n",
+    "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (use the external IP of the portal service, for example `http://35.x.x.x`).\n",
     "- `LOCAL_NETCDF`: optional local NetCDF path to skip the portal download.\n",
     "- `OUT_PLOT`: optional plot output path (default `plot.png`)."
    ]
