Use PORTAL_BASE config variable instead of env default

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -17,9 +17,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PORTAL_BASE = None  # set to http://<EXTERNAL-IP>\n",
+    "PORTAL_BASE = None  # set to the portal external IP, for example http://35.x.x.x\n",
     "LOCAL_NETCDF = None  # optional local fallback\n",
-    "OUT_PLOT = 'plot.png'"
+    "OUT_PLOT = \"plot.png\""
    ]
   },
   {
@@ -48,7 +48,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
     "from pathlib import Path\n",
     "from typing import Any, Dict, List\n",
     "\n",
@@ -66,14 +65,11 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "PORTAL_BASE = os.environ.get(\"PORTAL_BASE\")\n",
-    "PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
-    "LOCAL_NETCDF = os.environ.get(\"LOCAL_NETCDF\")\n",
-    "OUT_PLOT = Path(os.environ.get(\"OUT_PLOT\", \"plot.png\"))\n",
+    "OUT_PLOT = Path(OUT_PLOT) if not isinstance(OUT_PLOT, Path) else OUT_PLOT\n",
     "\n",
     "if not PORTAL_BASE and not LOCAL_NETCDF:\n",
     "    raise SystemExit(\n",
-    "        \"Set PORTAL_BASE to the portal external URL (for example http://34.x.x.x) \"\n",
+    "        \"Set PORTAL_BASE to the portal external URL (for example http://35.x.x.x) \"\n",
     "        \"or set LOCAL_NETCDF to a local file path.\"\n",
     "    )\n",
     "\n",
