Hardcode plot output name

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -65,7 +65,7 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "OUT_PLOT = Path(OUT_PLOT) if not isinstance(OUT_PLOT, Path) else OUT_PLOT\n",
+    "OUT_PLOT = Path(\"plot.png\")\n",
     "\n",
     "if not PORTAL_BASE and not LOCAL_NETCDF:\n",
     "    raise SystemExit(\n",
