Simplify analysis notebook: call functions directly

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -91,10 +91,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def list_datasets() -> List[Dict[str, Any]]:\n",
+    "def list_datasets() -> tuple[List[Dict[str, Any]], str | None]:\n",
     "    \"\"\"Return dataset entries from the portal API, or a local fallback if provided.\"\"\"\n",
     "    datasets: List[Dict[str, Any]] = []\n",
-    "    portal_error = None\n",
+    "    portal_error: str | None = None\n",
     "    if PORTAL_API:\n",
     "        try:\n",
     "            resp = requests.get(f\"{PORTAL_API}/datasets\", timeout=30)\n",
@@ -120,7 +120,7 @@
     "    print(f\"Found {len(datasets)} dataset entries\")\n",
     "    if datasets:\n",
     "        print(pd.DataFrame(datasets)[[\"id\", \"format\", \"bytes\", \"location\"]].head())\n",
-    "    return datasets"
+    "    return datasets, portal_error"
    ]
   },
   {
@@ -130,9 +130,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_dataset(entries: List[Dict[str, Any]]) -> Dict[str, Any]:\n",
+    "def choose_dataset(entries: List[Dict[str, Any]], portal_error: str | None = None) -> Dict[str, Any]:\n",
     "    if not entries:\n",
-    "        raise ValueError(\"No datasets available. Upload a NetCDF file first.\")\n",
+    "        msg = \"No datasets available. Upload a NetCDF file first.\"\n",
+    "        if portal_error:\n",
+    "            msg += (\n",
+    "                f\" The portal API was unreachable/erroring: {portal_error}. \"\n",
+    "                \"If the portal is down, set LOCAL_NETCDF to a local file path to proceed.\"\n",
+    "            )\n",
+    "        raise ValueError(msg)\n",
     "    for item in entries:\n",
     "        fmt = (item.get(\"format\") or \"\").lower()\n",
     "        if \"netcdf\" in fmt or str(item.get(\"id\", \"\")).endswith(\".nc\"):\n",
@@ -223,23 +229,12 @@
    "outputs": [],
    "source": [
     "def main():\n",
-    "    datasets = list_datasets()\n",
-    "    selected = choose_dataset(datasets)\n",
+    "    datasets, portal_error = list_datasets()\n",
+    "    selected = choose_dataset(datasets, portal_error)\n",
     "    print(f\"Selected dataset: {selected.get('id')}\")\n",
     "    local_path = download_dataset(selected)\n",
     "    ds = inspect_dataset(local_path)\n",
     "    plot_sample(ds, OUT_PLOT)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b7024299",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if __name__ == \"__main__\":\n",
-    "    main()"
    ]
   }
  ],
