Hardcode portal IP for testing

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PORTAL_BASE = None  # set to the portal external IP, for example http://35.x.x.x\n",
+    "PORTAL_BASE = \"http://136.117.247.219\"  # set to the portal external IP for this tutorial\n",
     "LOCAL_NETCDF = None  # optional local fallback\n",
     "OUT_PLOT = \"plot.png\""
    ]
