Drop OUT_PLOT variable; always write plot.png

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -18,8 +18,7 @@
    "outputs": [],
    "source": [
     "PORTAL_BASE = \"http://136.117.247.219\"  # set to the portal external IP for this tutorial\n",
-    "LOCAL_NETCDF = None  # optional local fallback\n",
-    "OUT_PLOT = \"plot.png\""
+    "LOCAL_NETCDF = None  # optional local fallback"
    ]
   },
   {
@@ -38,7 +37,7 @@
     "Configure at the top of the notebook:\n",
     "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (use the external IP of the portal service, for example `http://35.x.x.x`).\n",
     "- `LOCAL_NETCDF`: optional local NetCDF path to skip the portal download.\n",
-    "- `OUT_PLOT`: optional plot output path (default `plot.png`)."
+    "- Plot is saved to `plot.png` in the working directory."
    ]
   },
   {
@@ -65,7 +64,6 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "OUT_PLOT = Path(\"plot.png\")\n",
     "\n",
     "if not PORTAL_BASE and not LOCAL_NETCDF:\n",
     "    raise SystemExit(\n",
@@ -234,7 +232,7 @@
     "    print(f\"Selected dataset: {selected.get('id')}\")\n",
     "    local_path = download_dataset(selected)\n",
     "    ds = inspect_dataset(local_path)\n",
-    "    plot_sample(ds, OUT_PLOT)"
+    "    plot_sample(ds, Path(\"plot.png\"))"
    ]
   }
  ],
