--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PORTAL_BASE = \"http://136.117.247.219\"  # set to the portal external IP for this tutorial\n",
+    "PORTAL_BASE = \"http://toy-portal.portal.svc.cluster.local\"  # in-cluster service DNS; replace with external IP if accessing from outside\n",
     "LOCAL_NETCDF = None  # optional local fallback"
    ]
   },
@@ -35,7 +35,7 @@
     "- Kept in sync with the notebook via Jupytext (`ipynb` and `py:percent`).\n",
     "\n",
     "Configure at the top of the notebook:\n",
-    "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (use the external IP of the portal service, for example `http://35.x.x.x`).\n",
+    "- `PORTAL_BASE`: required unless `LOCAL_NETCDF` is set (inside the cluster use `http://toy-portal.portal.svc.cluster.local`; from outside use the portal external IP like `http://35.x.x.x`).\n",
     "- `LOCAL_NETCDF`: optional local NetCDF path to skip the portal download.\n",
     "- Plot is saved to `plot.png` in the working directory."
    ]
