Add 2D lat/lon scatter plot in analysis notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -31,7 +31,7 @@
     "What this does:\n",
     "- Lists datasets from the toy data portal API.\n",
     "- Falls back to a local NetCDF if `LOCAL_NETCDF` is set or the portal is unreachable.\n",
-    "- Downloads the chosen file (if not local), opens it with xarray, prints metadata, and saves a quick plot.\n",
+    "- Downloads the chosen file (if not local), opens it with xarray, prints metadata, and saves a quick 2D scatter plot (lat/lon colored by a data variable).\n",
     "- Kept in sync with the notebook via Jupytext (`ipynb` and `py:percent`).\n",
     "\n",
     "Configure at the top of the notebook:\n",
@@ -196,18 +196,33 @@
    "outputs": [],
    "source": [
     "def plot_sample(ds: xr.Dataset, output: Path) -> Path:\n",
+    "    \"\"\"Make a small, colorful 2D scatter using lat/lon and a numeric variable.\"\"\"\n",
     "    numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
     "    if not numeric_vars:\n",
     "        raise ValueError(\"No numeric variables found to plot.\")\n",
     "    var = numeric_vars[0]\n",
     "    da = ds[var]\n",
-    "    sliced = da\n",
-    "    for dim in da.dims:\n",
-    "        sliced = sliced.isel({dim: slice(0, min(50, da.sizes[dim]))})\n",
-    "    squeezed = sliced.squeeze()\n",
     "\n",
-    "    ax = squeezed.plot(figsize=(8, 4))\n",
-    "    plt.title(f\"Sample of '{var}'\")\n",
+    "    if \"lat\" in ds and \"lon\" in ds and \"feature_id\" in da.dims:\n",
+    "        n = min(5000, da.sizes.get(\"feature_id\", 0))\n",
+    "        lat = ds[\"lat\"].isel(feature_id=slice(0, n)).values\n",
+    "        lon = ds[\"lon\"].isel(feature_id=slice(0, n)).values\n",
+    "        vals = da.isel(feature_id=slice(0, n)).values\n",
+    "        plt.figure(figsize=(8, 6))\n",
+    "        sc = plt.scatter(lon, lat, c=vals, cmap=\"viridis\", s=3, linewidths=0)\n",
+    "        plt.colorbar(sc, label=var)\n",
+    "        plt.xlabel(\"Longitude\")\n",
+    "        plt.ylabel(\"Latitude\")\n",
+    "        plt.title(f\"{var} sample (first {n} points)\")\n",
+    "    else:\n",
+    "        # Fallback to a 1D slice if lat/lon are not present\n",
+    "        sliced = da\n",
+    "        for dim in da.dims:\n",
+    "            sliced = sliced.isel({dim: slice(0, min(50, da.sizes[dim]))})\n",
+    "        squeezed = sliced.squeeze()\n",
+    "        ax = squeezed.plot(figsize=(8, 4))\n",
+    "        plt.title(f\"Sample of '{var}'\")\n",
+    "\n",
     "    plt.tight_layout()\n",
     "    output.parent.mkdir(parents=True, exist_ok=True)\n",
     "    plt.savefig(output)\n",
