Skip portal API when LOCAL_NETCDF is set

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -71,15 +71,16 @@
     "        \"or set LOCAL_NETCDF to a local file path.\"\n",
     "    )\n",
     "\n",
-    "if PORTAL_BASE:\n",
+    "if LOCAL_NETCDF:\n",
+    "    # Local file overrides portal API lookups\n",
+    "    PORTAL_API = None\n",
+    "    print(f\"Local NetCDF override: {LOCAL_NETCDF}\")\n",
+    "elif PORTAL_BASE:\n",
     "    PORTAL_BASE = PORTAL_BASE.rstrip(\"/\")\n",
     "    print(f\"Portal base: {PORTAL_BASE}\")\n",
     "    PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
     "else:\n",
-    "    # Only allowed when LOCAL_NETCDF is provided\n",
-    "    PORTAL_API = None\n",
-    "if LOCAL_NETCDF:\n",
-    "    print(f\"Local NetCDF override: {LOCAL_NETCDF}\")"
+    "    PORTAL_API = None"
    ]
   },
   {
