Document 2D scatter plot choice in notebook

--- a/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
+++ b/toy_data_portal_hydrology/3_analyze_portal_data.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PORTAL_BASE = \"http://toy-portal.portal.svc.cluster.local\"  # in-cluster service DNS; replace with external IP if accessing from outside\n",
+    "PORTAL_BASE = \"http://toy-portal.portal.svc.cluster.local\"  # set to portal service (in-cluster DNS or external IP)\n",
     "LOCAL_NETCDF = None  # optional local fallback"
    ]
   },
@@ -47,6 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from pathlib import Path\n",
     "from typing import Any, Dict, List\n",
     "\n",
@@ -64,12 +65,7 @@
    "outputs": [],
    "source": [
     "# Configuration\n",
-    "\n",
-    "if not PORTAL_BASE and not LOCAL_NETCDF:\n",
-    "    raise SystemExit(\n",
-    "        \"Set PORTAL_BASE to the portal external URL (for example http://35.x.x.x) \"\n",
-    "        \"or set LOCAL_NETCDF to a local file path.\"\n",
-    "    )\n",
+    "LOCAL_NETCDF = os.environ.get(\"LOCAL_NETCDF\", LOCAL_NETCDF)\n",
     "\n",
     "if LOCAL_NETCDF:\n",
     "    # Local file overrides portal API lookups\n",
@@ -80,7 +76,9 @@
     "    print(f\"Portal base: {PORTAL_BASE}\")\n",
     "    PORTAL_API = f\"{PORTAL_BASE}/api\"\n",
     "else:\n",
-    "    PORTAL_API = None"
+    "    raise SystemExit(\n",
+    "        \"Set LOCAL_NETCDF to a local file path, or set PORTAL_BASE to the portal URL (for example http://35.x.x.x).\"\n",
+    "    )"
    ]
   },
   {
@@ -197,24 +195,28 @@
    "outputs": [],
    "source": [
     "def plot_sample(ds: xr.Dataset, output: Path) -> Path:\n",
-    "    \"\"\"Make a small, colorful 2D scatter using lat/lon and a numeric variable.\"\"\"\n",
-    "    numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
-    "    if not numeric_vars:\n",
-    "        raise ValueError(\"No numeric variables found to plot.\")\n",
-    "    var = numeric_vars[0]\n",
+    "    \"\"\"Make a small, colorful 2D scatter using lat/lon and a meaningful variable.\"\"\"\n",
+    "    preferred = [\"So\", \"TopWdth\", \"TopWdthCC\", \"order\", \"Qi\", \"nCC\"]\n",
+    "    var = next((v for v in preferred if v in ds), None)\n",
+    "    if not var:\n",
+    "        # fallback to first numeric\n",
+    "        numeric_vars = [name for name, da in ds.data_vars.items() if getattr(da, \"dtype\", None) and da.dtype.kind in \"if\"]\n",
+    "        if not numeric_vars:\n",
+    "            raise ValueError(\"No numeric variables found to plot.\")\n",
+    "        var = numeric_vars[0]\n",
     "    da = ds[var]\n",
     "\n",
     "    if \"lat\" in ds and \"lon\" in ds and \"feature_id\" in da.dims:\n",
-    "        n = min(5000, da.sizes.get(\"feature_id\", 0))\n",
+    "        n = min(50000, da.sizes.get(\"feature_id\", 0))\n",
     "        lat = ds[\"lat\"].isel(feature_id=slice(0, n)).values\n",
     "        lon = ds[\"lon\"].isel(feature_id=slice(0, n)).values\n",
     "        vals = da.isel(feature_id=slice(0, n)).values\n",
-    "        plt.figure(figsize=(8, 6))\n",
-    "        sc = plt.scatter(lon, lat, c=vals, cmap=\"viridis\", s=3, linewidths=0)\n",
+    "        plt.figure(figsize=(9, 6))\n",
+    "        sc = plt.scatter(lon, lat, c=vals, cmap=\"viridis\", s=2, linewidths=0)\n",
     "        plt.colorbar(sc, label=var)\n",
     "        plt.xlabel(\"Longitude\")\n",
     "        plt.ylabel(\"Latitude\")\n",
-    "        plt.title(f\"{var} sample (first {n} points)\")\n",
+    "        plt.title(f\"{var} (first {n} points)\")\n",
     "    else:\n",
     "        # Fallback to a 1D slice if lat/lon are not present\n",
     "        sliced = da\n",
